# cuda-sgemm

./: CMakeLists.txt  README.md
include/sgemm/: utils.cuh
scripts/: setup_colab.sh
src/: device_query.cu
